--- a/res/layout/main_activity.xml
+++ b/res/layout/main_activity.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical">
     
     <!-- Image Box -->
     <LinearLayout 
@@ -14,21 +14,22 @@
             android:id="@+id/imgProfilePicture"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
+            android:scaleType="center"
             android:contentDescription="@string/profilePictureContentDescription"
-            android:src="@drawable/bioshock" />
+            android:src="@drawable/ff7" />
     </LinearLayout>
     
     <!-- Main Content Box -->
     <LinearLayout 
         android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_weight="2">
+        android:layout_height="0dp"
+        android:layout_weight="3">
         <TextView 
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="wrap_content" 
             android:gravity="center"
             android:text="@string/profileWelcomeMessage"
-            android:textSize="30sp"/>
+            android:textSize="27sp" />
     </LinearLayout>
 </LinearLayout>
