Added a Preferences activity with a few empty options. Also mad eit possible to change name registered to app.

--- a/res/menu/main_menu.xml
+++ b/res/menu/main_menu.xml
@@ -11,7 +11,7 @@
         android:id="@+id/itemgameListActivity"
         android:title="Game List"/>
     <item
-        android:id="@+id/itemSettingsActivity"
-        android:title="Settings"/>
+        android:id="@+id/itemPreferencesActivity"
+        android:title="Preferences"/>
 
 </menu>
