--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -21,6 +21,7 @@
     
     <!-- Control -->
     <color name="White">#FFFFFF</color>
+    <color name="Black">#000000</color>
     <color name="Grey">#CCCCCC</color>
     <color name="TableGrey">#DDDDDD</color>
 
